@@ -216,6 +216,7 @@ where XXXXXX is the bug number as listed below.
 338205  configure.ac and check for -Wno-tautological-compare
 338445  amd64 vbit-test fails with unknown opcodes used by arm64 VEX
 338499  --sim-hints parsing broken due to wrong order in tokens
+338615  suppress glibc 2.20 optimized strcmp implementation for ARMv7
 n-i-bz  Fix KVM_CREATE_IRQCHIP ioctl handling
 n-i-bz  s390x: Fix memory corruption for multithreaded applications
 n-i-bz  vex arm->IR: allow PC as basereg in some LDRD cases
